--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
