--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.14.0",
+    "react-confetti": "^6.0.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
+    "react-use": "^15.3.4",
     "styled-components": "^5.2.0",
     "use-sound": "^1.0.2"
   },
